--- a/wildnetmap.html
+++ b/wildnetmap.html
@@ -4467,12 +4467,293 @@
         "max_intensity": 1.0,
         "point_radius": 14.0
       }
+    },
+    "7d218b94b0944b5d96d5e726121c0e86": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {
+        "height": "100%",
+        "width": "100%"
+      }
+    },
+    "c0510d6a54784c7ca548d36dc1582084": {
+      "model_name": "PlainmapModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "configuration": {
+          "api_key": "AIzaSyCj8UltetthEmfeR57GAt3uLV_iGKsdoLI"
+        },
+        "data_bounds": [
+          [
+            41.67763591255866,
+            -91.38805037959236
+          ],
+          [
+            42.89492967009717,
+            -48.70760286204904
+          ]
+        ],
+        "initial_viewport": {
+          "type": "ZOOM_CENTER",
+          "center": [
+            42.382775,
+            -71.11723333333333
+          ],
+          "zoom_level": 11
+        },
+        "layers": [
+          "IPY_MODEL_e54fce0ddbd6456c9f6abf04064385f3"
+        ],
+        "layout": "IPY_MODEL_7d218b94b0944b5d96d5e726121c0e86",
+        "map_type": "TERRAIN"
+      }
+    },
+    "9517a0457a9f48a4b956b4d8a51b8c5f": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {}
+    },
+    "4b080e8a2b214b7fa3245f44fbc8e56f": {
+      "model_name": "ToolbarModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "layer_controls": [],
+        "layout": "IPY_MODEL_9517a0457a9f48a4b956b4d8a51b8c5f"
+      }
+    },
+    "b476c0ae25db40e89659f3b532d6019e": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {}
+    },
+    "8c0091f8edb74c1995e1b0eb27a56165": {
+      "model_name": "ErrorsBoxModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "errors": [],
+        "layout": "IPY_MODEL_b476c0ae25db40e89659f3b532d6019e"
+      }
+    },
+    "195adbe7e98748e38be7ee45825bc00a": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {
+        "height": "420px"
+      }
+    },
+    "38307a6a638e4b24aebafcb3b9cbca2e": {
+      "model_name": "FigureModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "_errors_box": "IPY_MODEL_8c0091f8edb74c1995e1b0eb27a56165",
+        "_map": "IPY_MODEL_c0510d6a54784c7ca548d36dc1582084",
+        "_toolbar": "IPY_MODEL_4b080e8a2b214b7fa3245f44fbc8e56f",
+        "layout": "IPY_MODEL_195adbe7e98748e38be7ee45825bc00a"
+      }
+    },
+    "e54fce0ddbd6456c9f6abf04064385f3": {
+      "model_name": "SimpleHeatmapLayerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "data_bounds": [
+          [
+            41.67763591255866,
+            -91.38805037959236
+          ],
+          [
+            42.89492967009717,
+            -48.70760286204904
+          ]
+        ],
+        "gradient": null,
+        "locations": [
+          [
+            41.59295277777778,
+            1.8378583333333334
+          ],
+          [
+            41.44233055555555,
+            -73.97660833333333
+          ],
+          [
+            41.45441944444445,
+            -73.96406666666667
+          ],
+          [
+            42.43062222222222,
+            -71.10733055555555
+          ],
+          [
+            42.42522777777778,
+            -71.1115111111111
+          ],
+          [
+            42.4309,
+            -71.10836111111111
+          ],
+          [
+            42.43061111111111,
+            -71.10720833333333
+          ],
+          [
+            42.43061111111111,
+            -71.10746666666667
+          ],
+          [
+            42.430775,
+            -71.10794166666666
+          ],
+          [
+            42.43068611111111,
+            -71.10732222222222
+          ],
+          [
+            42.43054166666666,
+            -71.1070111111111
+          ],
+          [
+            42.43058055555555,
+            -71.10723888888889
+          ],
+          [
+            42.37845277777778,
+            -71.11547222222222
+          ],
+          [
+            42.38298888888889,
+            -71.12119999999999
+          ],
+          [
+            42.382600000000004,
+            -71.1211
+          ],
+          [
+            42.37987777777778,
+            -71.1156
+          ],
+          [
+            42.37987777777778,
+            -71.1156
+          ],
+          [
+            42.36032222222222,
+            -71.08745555555555
+          ],
+          [
+            42.38285,
+            -71.12126944444444
+          ],
+          [
+            42.37898611111111,
+            -71.11723333333333
+          ],
+          [
+            42.379158333333336,
+            -71.11716388888888
+          ],
+          [
+            42.379158333333336,
+            -71.11716388888888
+          ],
+          [
+            42.367111111111114,
+            -71.10240833333333
+          ],
+          [
+            42.36712777777778,
+            -71.10237777777778
+          ],
+          [
+            42.409727777777775,
+            -71.14861944444445
+          ],
+          [
+            42.409727777777775,
+            -71.14861944444445
+          ],
+          [
+            42.40943611111111,
+            -71.14873611111112
+          ],
+          [
+            42.40937777777778,
+            -71.14912500000001
+          ],
+          [
+            42.40937777777778,
+            -71.14912500000001
+          ],
+          [
+            42.42809166666667,
+            -71.20152222222222
+          ],
+          [
+            42.428780555555555,
+            -71.20155277777778
+          ],
+          [
+            42.428044444444446,
+            -71.18926944444445
+          ],
+          [
+            42.37852222222222,
+            -71.11718888888888
+          ],
+          [
+            42.430594444444445,
+            -71.10705555555555
+          ],
+          [
+            42.382775,
+            -71.12119166666666
+          ],
+          [
+            42.38273888888889,
+            -71.12114722222222
+          ],
+          [
+            41.44233055555555,
+            -73.97660833333333
+          ],
+          [
+            41.44233055555555,
+            -73.97660833333333
+          ],
+          [
+            42.38256944444444,
+            -71.12106388888888
+          ],
+          [
+            42.382672222222226,
+            -71.12121666666665
+          ],
+          [
+            42.30172777777778,
+            -71.11896388888889
+          ]
+        ],
+        "max_intensity": 1000.0,
+        "point_radius": 1.0
+      }
     }
   }
 }
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
-{"version_major": 2, "version_minor": 0, "model_id": "dfd6ae0df9644200a9fab5753136bb35"}
+{"version_major": 2, "version_minor": 0, "model_id": "38307a6a638e4b24aebafcb3b9cbca2e"}
 </script>
 
 </body>
