Update PNG content

--- a/wildnetmap.html
+++ b/wildnetmap.html
@@ -6153,12 +6153,293 @@
         "max_intensity": 20.0,
         "point_radius": 14.0
       }
+    },
+    "ff495624b82d4db89daad4f89416c17e": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {
+        "height": "100%",
+        "width": "100%"
+      }
+    },
+    "9b4894f86fb745bda50100c403e8beed": {
+      "model_name": "PlainmapModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "configuration": {
+          "api_key": "AIzaSyCj8UltetthEmfeR57GAt3uLV_iGKsdoLI"
+        },
+        "data_bounds": [
+          [
+            41.67763591255866,
+            -91.38805037959236
+          ],
+          [
+            42.89492967009717,
+            -48.70760286204904
+          ]
+        ],
+        "initial_viewport": {
+          "type": "ZOOM_CENTER",
+          "center": [
+            42.382775,
+            -71.11723333333333
+          ],
+          "zoom_level": 11
+        },
+        "layers": [
+          "IPY_MODEL_f05b017a414f41e1a48c341770961c25"
+        ],
+        "layout": "IPY_MODEL_ff495624b82d4db89daad4f89416c17e",
+        "map_type": "TERRAIN"
+      }
+    },
+    "13462a20fcb543f6819956ba3f5805df": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {}
+    },
+    "52d69f292d964f59b6d388a8fa7f5e62": {
+      "model_name": "ToolbarModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "layer_controls": [],
+        "layout": "IPY_MODEL_13462a20fcb543f6819956ba3f5805df"
+      }
+    },
+    "a914266147fd44edb6330ad859682c69": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {}
+    },
+    "987f9d092daa4e46ae3d86c11a3b4962": {
+      "model_name": "ErrorsBoxModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "errors": [],
+        "layout": "IPY_MODEL_a914266147fd44edb6330ad859682c69"
+      }
+    },
+    "40e3d0c89da643929c16834ff48c40be": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {
+        "height": "420px"
+      }
+    },
+    "e97dd20959ec4ee5827661e6267a84fa": {
+      "model_name": "FigureModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "_errors_box": "IPY_MODEL_987f9d092daa4e46ae3d86c11a3b4962",
+        "_map": "IPY_MODEL_9b4894f86fb745bda50100c403e8beed",
+        "_toolbar": "IPY_MODEL_52d69f292d964f59b6d388a8fa7f5e62",
+        "layout": "IPY_MODEL_40e3d0c89da643929c16834ff48c40be"
+      }
+    },
+    "f05b017a414f41e1a48c341770961c25": {
+      "model_name": "SimpleHeatmapLayerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "data_bounds": [
+          [
+            41.67763591255866,
+            -91.38805037959236
+          ],
+          [
+            42.89492967009717,
+            -48.70760286204904
+          ]
+        ],
+        "gradient": null,
+        "locations": [
+          [
+            41.59295277777778,
+            1.8378583333333334
+          ],
+          [
+            41.44233055555555,
+            -73.97660833333333
+          ],
+          [
+            41.45441944444445,
+            -73.96406666666667
+          ],
+          [
+            42.43062222222222,
+            -71.10733055555555
+          ],
+          [
+            42.42522777777778,
+            -71.1115111111111
+          ],
+          [
+            42.4309,
+            -71.10836111111111
+          ],
+          [
+            42.43061111111111,
+            -71.10720833333333
+          ],
+          [
+            42.43061111111111,
+            -71.10746666666667
+          ],
+          [
+            42.430775,
+            -71.10794166666666
+          ],
+          [
+            42.43068611111111,
+            -71.10732222222222
+          ],
+          [
+            42.43054166666666,
+            -71.1070111111111
+          ],
+          [
+            42.43058055555555,
+            -71.10723888888889
+          ],
+          [
+            42.37845277777778,
+            -71.11547222222222
+          ],
+          [
+            42.38298888888889,
+            -71.12119999999999
+          ],
+          [
+            42.382600000000004,
+            -71.1211
+          ],
+          [
+            42.37987777777778,
+            -71.1156
+          ],
+          [
+            42.37987777777778,
+            -71.1156
+          ],
+          [
+            42.36032222222222,
+            -71.08745555555555
+          ],
+          [
+            42.38285,
+            -71.12126944444444
+          ],
+          [
+            42.37898611111111,
+            -71.11723333333333
+          ],
+          [
+            42.379158333333336,
+            -71.11716388888888
+          ],
+          [
+            42.379158333333336,
+            -71.11716388888888
+          ],
+          [
+            42.367111111111114,
+            -71.10240833333333
+          ],
+          [
+            42.36712777777778,
+            -71.10237777777778
+          ],
+          [
+            42.409727777777775,
+            -71.14861944444445
+          ],
+          [
+            42.409727777777775,
+            -71.14861944444445
+          ],
+          [
+            42.40943611111111,
+            -71.14873611111112
+          ],
+          [
+            42.40937777777778,
+            -71.14912500000001
+          ],
+          [
+            42.40937777777778,
+            -71.14912500000001
+          ],
+          [
+            42.42809166666667,
+            -71.20152222222222
+          ],
+          [
+            42.428780555555555,
+            -71.20155277777778
+          ],
+          [
+            42.428044444444446,
+            -71.18926944444445
+          ],
+          [
+            42.37852222222222,
+            -71.11718888888888
+          ],
+          [
+            42.430594444444445,
+            -71.10705555555555
+          ],
+          [
+            42.382775,
+            -71.12119166666666
+          ],
+          [
+            42.38273888888889,
+            -71.12114722222222
+          ],
+          [
+            41.44233055555555,
+            -73.97660833333333
+          ],
+          [
+            41.44233055555555,
+            -73.97660833333333
+          ],
+          [
+            42.38256944444444,
+            -71.12106388888888
+          ],
+          [
+            42.382672222222226,
+            -71.12121666666665
+          ],
+          [
+            42.30172777777778,
+            -71.11896388888889
+          ]
+        ],
+        "max_intensity": 15.0,
+        "point_radius": 14.0
+      }
     }
   }
 }
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
-{"version_major": 2, "version_minor": 0, "model_id": "5fc19fed92e84fde916ab6b6a9f8092e"}
+{"version_major": 2, "version_minor": 0, "model_id": "e97dd20959ec4ee5827661e6267a84fa"}
 </script>
 
 </body>
