--- a/wildnetmap.html
+++ b/wildnetmap.html
@@ -1416,12 +1416,301 @@
         "max_intensity": 10.0,
         "point_radius": 14.0
       }
+    },
+    "69645f5f689040a99dcff0f38d8b19e1": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {
+        "height": "100%",
+        "width": "100%"
+      }
+    },
+    "478091d384424ccdb05d09e5f61f6079": {
+      "model_name": "PlainmapModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "configuration": {
+          "api_key": "AIzaSyCj8UltetthEmfeR57GAt3uLV_iGKsdoLI"
+        },
+        "data_bounds": [
+          [
+            41.69410891981903,
+            -90.93696352013148
+          ],
+          [
+            42.8859633024032,
+            -49.25951915865181
+          ]
+        ],
+        "initial_viewport": {
+          "type": "ZOOM_CENTER",
+          "center": [
+            42.382775,
+            -71.11723333333333
+          ],
+          "zoom_level": 11
+        },
+        "layers": [
+          "IPY_MODEL_9fa161e5653e4d1988456e10606b4133"
+        ],
+        "layout": "IPY_MODEL_69645f5f689040a99dcff0f38d8b19e1",
+        "map_type": "TERRAIN"
+      }
+    },
+    "f12e307d946442cb86ac3a040015079b": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {}
+    },
+    "17175ae6fe404e158cb1850326747867": {
+      "model_name": "ToolbarModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "layer_controls": [],
+        "layout": "IPY_MODEL_f12e307d946442cb86ac3a040015079b"
+      }
+    },
+    "efd5a41736d146fa812930d56736f657": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {}
+    },
+    "3b052b24b1224c24a4d29fee50bf6c7a": {
+      "model_name": "ErrorsBoxModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "errors": [],
+        "layout": "IPY_MODEL_efd5a41736d146fa812930d56736f657"
+      }
+    },
+    "4f2cbd0570274243a89ff759f4f905e3": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "state": {
+        "height": "420px"
+      }
+    },
+    "d2f5347ab5bd4a74acd82f962de5ad33": {
+      "model_name": "FigureModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "_dom_classes": [],
+        "_errors_box": "IPY_MODEL_3b052b24b1224c24a4d29fee50bf6c7a",
+        "_map": "IPY_MODEL_478091d384424ccdb05d09e5f61f6079",
+        "_toolbar": "IPY_MODEL_17175ae6fe404e158cb1850326747867",
+        "layout": "IPY_MODEL_4f2cbd0570274243a89ff759f4f905e3"
+      }
+    },
+    "9fa161e5653e4d1988456e10606b4133": {
+      "model_name": "SimpleHeatmapLayerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "data_bounds": [
+          [
+            41.69410891981903,
+            -90.93696352013148
+          ],
+          [
+            42.8859633024032,
+            -49.25951915865181
+          ]
+        ],
+        "gradient": null,
+        "locations": [
+          [
+            41.59295277777778,
+            1.8378583333333334
+          ],
+          [
+            41.44233055555555,
+            -73.97660833333333
+          ],
+          [
+            41.45441944444445,
+            -73.96406666666667
+          ],
+          [
+            42.43062222222222,
+            -71.10733055555555
+          ],
+          [
+            42.42522777777778,
+            -71.1115111111111
+          ],
+          [
+            42.4309,
+            -71.10836111111111
+          ],
+          [
+            42.43061111111111,
+            -71.10720833333333
+          ],
+          [
+            42.43061111111111,
+            -71.10746666666667
+          ],
+          [
+            42.430775,
+            -71.10794166666666
+          ],
+          [
+            42.43068611111111,
+            -71.10732222222222
+          ],
+          [
+            42.43054166666666,
+            -71.1070111111111
+          ],
+          [
+            42.43058055555555,
+            -71.10723888888889
+          ],
+          [
+            42.37845277777778,
+            -71.11547222222222
+          ],
+          [
+            42.38298888888889,
+            -71.12119999999999
+          ],
+          [
+            42.382600000000004,
+            -71.1211
+          ],
+          [
+            42.37987777777778,
+            -71.1156
+          ],
+          [
+            42.37987777777778,
+            -71.1156
+          ],
+          [
+            42.36032222222222,
+            -71.08745555555555
+          ],
+          [
+            42.38285,
+            -71.12126944444444
+          ],
+          [
+            42.37898611111111,
+            -71.11723333333333
+          ],
+          [
+            42.379158333333336,
+            -71.11716388888888
+          ],
+          [
+            42.379158333333336,
+            -71.11716388888888
+          ],
+          [
+            42.367111111111114,
+            -71.10240833333333
+          ],
+          [
+            42.36712777777778,
+            -71.10237777777778
+          ],
+          [
+            42.409727777777775,
+            -71.14861944444445
+          ],
+          [
+            42.409727777777775,
+            -71.14861944444445
+          ],
+          [
+            42.40943611111111,
+            -71.14873611111112
+          ],
+          [
+            42.40937777777778,
+            -71.14912500000001
+          ],
+          [
+            42.40937777777778,
+            -71.14912500000001
+          ],
+          [
+            42.42809166666667,
+            -71.20152222222222
+          ],
+          [
+            42.428780555555555,
+            -71.20155277777778
+          ],
+          [
+            42.428044444444446,
+            -71.18926944444445
+          ],
+          [
+            42.37852222222222,
+            -71.11718888888888
+          ],
+          [
+            42.430594444444445,
+            -71.10705555555555
+          ],
+          [
+            42.382775,
+            -71.12119166666666
+          ],
+          [
+            42.38273888888889,
+            -71.12114722222222
+          ],
+          [
+            41.44233055555555,
+            -73.97660833333333
+          ],
+          [
+            41.44233055555555,
+            -73.97660833333333
+          ],
+          [
+            42.38256944444444,
+            -71.12106388888888
+          ],
+          [
+            42.382672222222226,
+            -71.12121666666665
+          ],
+          [
+            42.30172777777778,
+            -71.11896388888889
+          ],
+          [
+            42.30334722222222,
+            -71.12084999999999
+          ],
+          [
+            42.43061111111111,
+            -71.10720833333333
+          ]
+        ],
+        "max_intensity": 10.0,
+        "point_radius": 14.0
+      }
     }
   }
 }
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
-{"version_major": 2, "version_minor": 0, "model_id": "6cbbfbcb54d54444b255cd4c1c43010b"}
+{"version_major": 2, "version_minor": 0, "model_id": "d2f5347ab5bd4a74acd82f962de5ad33"}
 </script>
 
 </body>
